--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -36,7 +36,7 @@ a {
     margin-bottom: 15px;
     line-height: 50px;
     text-align: center;
-    font-size: 0.875em;
+    font-size: 14px;
     font-weight: bolder;
     color: white;
     font-family: helvetica;
@@ -140,7 +140,7 @@ a {
     float: right;
     display: inline-block;
     text-align: center;
-    font-size: 2.500em;
+    font-size: 40px;
     margin-right: 15px;
 }
 
@@ -148,7 +148,7 @@ a {
     float: right;
     display: inline-block;
     text-align: center;
-    font-size: 1.250em;
+    font-size: 20px;
     padding-top: 70px;
     margin-right: 15px;
 }
@@ -157,7 +157,7 @@ a {
     float: left;
     display: inline-block;
     text-align: center;
-    font-size: 2.500em;
+    font-size: 40px;
     margin-left: 15px;
 }
 
@@ -165,7 +165,7 @@ a {
     float: left;
     display: inline-block;
     text-align: center;
-    font-size: 1.250em;
+    font-size: 20px;
     padding-top: 70px;
     margin-left: 15px;
 }
@@ -185,7 +185,7 @@ a {
     width: 100px;
     background-size: 100px 45px;
     margin-top: 14px;
-    font-size: 2.000em;
+    font-size: 32px;
     color: white;
     text-shadow: 2px 2px 2px #5E626B;
 }
@@ -205,7 +205,7 @@ a {
     height: 300px;
     margin: 0px auto;
     padding-left: 10px;
-    font-size: 2.188em;
+    font-size: 35px;
     font-family: Helvetica;
     color: white;
     text-shadow: 1px 1px 2px rgba(150, 150, 150, 1);
@@ -256,7 +256,7 @@ a {
     background-color: black;
     padding-left: 10px;
     padding-top: 105px;
-    font-size: 2.188em;
+    font-size: 35px;
     font-family: Helvetica;
     color: white;
     text-shadow: 1px 1px 2px rgba(150, 150, 150, 1);
@@ -270,7 +270,7 @@ a {
     margin: 0px auto;
     background-color: lightgray;
     padding-left: 10px;
-    font-size: 2.188em;
+    font-size: 35px;
     font-family: Helvetica;
     color: black;
     text-shadow: 1px 1px 2px rgba(150, 150, 150, 1);
@@ -283,7 +283,7 @@ a {
     height: 100px;
     margin: 0px auto;
     background-color: lightgray;
-    font-size: 3.125em;
+    font-size: 50px;
     line-height: 100px;
     padding-left: 10px;
     font-family: Helvetica;
@@ -302,7 +302,7 @@ a {
     height: 300px;
     margin: 0px auto;
     padding-left: 10px;
-    font-size: 2.188em;
+    font-size: 35px;
     font-family: Helvetica;
     color: white;
     text-shadow: 1px 1px 2px rgba(150, 150, 150, 1);
@@ -317,13 +317,13 @@ a {
     display: block;
     margin-top: 3px;
     margin-left: 5px;
-    font-size: 2.500em;
+    font-size: 40px;
     text-shadow: 2px 2px 2px #5E626B;
 }
 
 .teamName {
     display: block;
-    font-size: 3.750em;
+    font-size: 60px;
     margin-left: 4px;
     text-shadow: 2px 2px 2px #5E626B;
 }
@@ -455,7 +455,7 @@ a {
 
 .stadiumName {
     display: inline-block;
-    font-size: 2.500em;
+    font-size: 40px;
     text-shadow: 2px 2px 2px #5E626B;
     max-width: 250px;
 }
@@ -478,7 +478,7 @@ a {
     margin-top: 250px;
     background: linear-gradient(to bottom, rgba(79,133,187,1) 0%,rgba(79,133,187,1) 100%);     
     text-align: center;
-    font-size: 1.250em;
+    font-size: 20px;
     font-family: Helvetica;
     text-shadow: 0px -1px 0px black;
     -webkit-transition: all 0.1s;
@@ -500,7 +500,7 @@ a {
     background: linear-gradient(to bottom, rgba(79,133,187,1) 0%,rgba(79,133,187,1) 100%);     
     color: white;
     text-align: center;
-    font-size: 1.250em;
+    font-size: 20px;
     font-family: Helvetica;
     text-shadow: 0px -1px 0px black;
     -webkit-transition: all 0.1s;
@@ -522,7 +522,7 @@ a {
     background-color: lightgray;
     line-height: 100px;
     padding-left: 10px;
-    font-size: 2.188em;
+    font-size: 35px;
     font-family: Helvetica;
     color: black;
     text-shadow: 1px 1px 2px rgba(150, 150, 150, 1);
@@ -560,19 +560,19 @@ a {
 
 .stadiumAddress {
     font-family: Helvetica;
-    font-size: 1.250em;
+    font-size: 20px;
     margin-bottom: 20px;
 }
 
 .stadiumPhone {
     font-family: Helvetica;
-    font-size: 1.250em;
+    font-size: 20px;
     margin-bottom: 20px;
 }
 
 .stadiumURL {
     font-family: Helvetica;
-    font-size: 1.250em;
+    font-size: 20px;
     margin-bottom: 20px;
 }
 
@@ -604,7 +604,7 @@ a {
 .stadiumMap {
     height: 30px;
     margin-bottom: 22px;
-    font-size: 1.250em;
+    font-size: 20px;
     font-family: Helvetica;
     margin-left: 10px;
 }
@@ -640,7 +640,7 @@ a {
     .stadiumMap {
         height: 30px;
         margin-bottom: 0px;
-        font-size: 1.250em;
+        font-size: 20px;
         font-family: Helvetica;
         margin-left: 23px;
     }
@@ -686,20 +686,20 @@ a {
         display: block;
         margin-top: 3px;
         margin-left: 5px;
-        font-size: 1.250em;
+        font-size: 20px;
         max-width: 180px;
     }
 
     .teamName {
         display: block;
-        font-size: 1.250em;
+        font-size: 20px;
         margin-left: 4px;
         margin-bottom: 20px;
     }
 
     .stadiumName {
         display: inline-block;
-        font-size: 1.250em;
+        font-size: 20px;
         max-width: 120px;
     }
 
@@ -712,7 +712,7 @@ a {
         margin-right: 10px;
         margin-top: 140px;
         text-align: center;
-        font-size: 1.250em;
+        font-size: 20px;
         
     }
 
@@ -725,7 +725,7 @@ a {
         width: 60px;
         color: white;
         text-align: center;
-        font-size: 1.250em;
+        font-size: 20px;
         
     }
 
