--- a/app/styles/players.scss
+++ b/app/styles/players.scss
@@ -26,7 +26,7 @@
 
 .playerName {
     display: inline-block;
-    font-size: 1.875em;
+    font-size: 30px;
     margin-top: 18px;
     margin-left: 15px;
 
@@ -35,7 +35,7 @@
 .playerPosition {
     display: inline-block;
     float: right;
-    font-size: 1.875em;
+    font-size: 30px;
     margin-right: 15px;
     margin-top: 20px;
 
@@ -54,7 +54,7 @@
 
 .pName {
     display: inline-block;
-    font-size: 1.250em;
+    font-size: 20px;
     margin-left: 75px;
     margin-top: 3px;
 
@@ -63,7 +63,7 @@
 .pPosition {
     display: inline-block;
     float: right;
-    font-size: 1.250em;
+    font-size: 20px;
     margin-right: 15px;
     margin-top: 3px;
 
@@ -73,7 +73,7 @@
 
     .pName {
         display: inline-block;
-        font-size: 1.000em;
+        font-size: 16px;
         margin-left: 75px;
         margin-top: 3px;
 
@@ -82,7 +82,7 @@
     .pPosition {
         display: inline-block;
         float: right;
-        font-size: 1.000em;
+        font-size: 16px;
         margin-right: 10px;
         margin-top: 3px;
 
@@ -102,7 +102,7 @@
 
     .playerName {
     display: inline-block;
-    font-size: 1.000em;
+    font-size: 16px;
     margin-top: 18px;
     margin-left: 15px;
 
@@ -111,7 +111,7 @@
     .playerPosition {
     display: inline-block;
     float: right;
-    font-size: 1.000em;
+    font-size: 16px;
     margin-right: 15px;
     margin-top: 20px;
 
